Update hostlists translations

--- a/locales/be/tags.json
+++ b/locales/be/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Спісы, якія блакуюць асочванне і рэкламу на большасці прылад."
 	},
 	{
 		"hostlisttag.4.name": "Іншыя",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Іншыя спісы блакавання."
 	},
 	{
 		"hostlisttag.3.name": "Рэгіянальныя",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Спісы, якія факусуюцца на рэгіянальнай рэкламе і серверах асочвання."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Блакаванне рэкламы на нарвежскай мове",
+		"hostlisttag.100.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на нарвежскай мове."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Блакаванне рэкламы на польскай мове",
+		"hostlisttag.101.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на польскай мове."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Блакаванне рэкламы на карэйскай мове",
+		"hostlisttag.102.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на карэйскай мове."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Блакаванне рэкламы на в'етнамскай мове",
+		"hostlisttag.103.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на в'етнамскай мове."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Блакаванне рэкламы на шведскай мове",
+		"hostlisttag.104.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на шведскай мове."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Блакаванне рэкламы на італьянскай мове",
+		"hostlisttag.105.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на італьянскай мове."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Блакаванне рэкламы на іранскай мове",
+		"hostlisttag.106.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на іранскай мове."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Блакаванне рэкламы на македонскай мове",
+		"hostlisttag.107.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на македонскай мове."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Блакаванне рэкламы на кітайскай мове",
+		"hostlisttag.108.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на кітайскай мове."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Блакаванне рэкламы на інданезійскай мове",
+		"hostlisttag.109.description": "Створаны адмыслова для блакавання рэкламы і іншага непажаданага кантэнту на інданезійскай мове."
 	},
 	{
 		"hostlisttag.2.name": "Блакаваць шкодныя і фішынгавыя сайты",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Спісы, якія спецыялізуюцца на блакаванні шкодных праграм, фішынгавых ці махлярскіх даменаў."
 	}
 ]
