--- a/locales/da/tags.json
+++ b/locales/da/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "Generalt",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Lister til blokering af sporing og reklamer på de fleste enheder."
 	},
 	{
 		"hostlisttag.4.name": "Andet",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Andre sortlister."
 	},
 	{
 		"hostlisttag.3.name": "Regional",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Lister målrettet regionale annoncer og sporingsservere."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Sprogspecifik norsk adblocking",
+		"hostlisttag.100.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på norsk."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Sprogspecifik polsk adblocking",
+		"hostlisttag.101.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på polsk."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Sprogspecifik koreansk adblocking",
+		"hostlisttag.102.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på koreansk."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Sprogspecifik vietnamesisk adblocking",
+		"hostlisttag.103.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på vietnamesisk."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Sprogspecifik svensk adblocking",
+		"hostlisttag.104.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på svensk."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Sprogspecifik italiensk adblocking",
+		"hostlisttag.105.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på italiensk."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Sprogspecifik iransk adblocking",
+		"hostlisttag.106.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på iransk."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Sprogspecifik makedonsk adblocking",
+		"hostlisttag.107.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på makedonsk."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Sprogspecifik kinesisk adblocking",
+		"hostlisttag.108.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på kinesisk."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Sprogspecifik indonesisk adblocking",
+		"hostlisttag.109.description": "Designet specielt til at blokere annoncer og andet uønsket indhold på indonesisk."
 	},
 	{
 		"hostlisttag.2.name": "Sikkerhed",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Lister designet specielt til at blokere ondsindede eller phishing-/svindel-domæner."
 	}
 ]
