--- a/locales/de/filters.json
+++ b/locales/de/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Filter, der sich aus mehreren anderen Filtern zusammensetzt (AdGuard Base-Filter, Social Media-Filter, Tracking-Schutzfilter, Filter für mobile Werbung, EasyList und EasyPrivacy) und speziell vereinfacht wurde, um besser für das Sperren von Werbung auf DNS-Ebene kompatibel zu sein."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Standard-Sperrliste",
+		"hostlist.2.description": "AdAway ist ein Open-Source-Werbeblocker für Android, der die Hosts-Datei verwendet."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Sperrung mit den Hostnamen von Werbung- und Tracking-Servern."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollocks Liste",
+		"hostlist.4.description": "Sperrt bestimmte Popup-Fallen, verhindert das Nachverfolgen von Nutzern und sperrt die meiste Werbung."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD-Sperrliste Basic",
+		"hostlist.5.description": "Sperrt Werbung/Tracker und gibt der Funktionalität Vorrang vor dem Sperren."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker — Hosts-Spionagesperrregeln",
+		"hostlist.23.description": "Sperren von Spionage und Nachverfolgung unter Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprouts Werbeblocker-Liste für Spielkonsolen",
+		"hostlist.6.description": "Sperrliste für Spielkonsolen, die mit AdGuard Home verbunden sind."
 	},
 	{
-		"hostlist.7.name": "",
+		"hostlist.7.name": "Perflyst und Dandelion Sprouts Smart-TV-Sperrliste",
 		"hostlist.7.description": ""
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts Nordische Filter",
+		"hostlist.13.description": "Dandelion Sprouts Nordische Filter (für AdGuard Home und für das DNS-Filtern von AdGuard für Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polnische Filter für Pi-Hole",
+		"hostlist.14.description": "Polnische Filter für Pi-Hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Sperrfilter für Werbung, hauptsächlich auf koreanischen Websites."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN-Liste",
+		"hostlist.16.description": "Werbeblocker-Filterliste für vietnamesische Websites."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwits schwedische Hosts-Datei",
+		"hostlist.17.description": "Entfernt Werbung, Tracking, Betrug und Schadsoftware auf schwedischen Websites."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: DNS-Filter",
+		"hostlist.18.description": "Vorläufige Hosts-Datei für italienischsprachige Webseiten, hervorgegangen aus „Easylist Italy“ und „ADB X Files“."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unerwünschte iranische Domains",
+		"hostlist.19.description": "Liste der kategorisierten unerwünschten Hosts."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Mazedonische Pi-Hole-Sperrliste",
+		"hostlist.20.description": "Liste zum Sperren von Werbung auf mazedonischen Websites."
 	},
 	{
-		"hostlist.21.name": "",
+		"hostlist.21.name": "CHN: Anti-AD",
 		"hostlist.21.description": ""
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo ist ein zusätzlicher Filter für EasyList zum Sperren lästiger Werbung auf indonesisch- und malaysischsprachigen Websites."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "DurableNapkins Sperrliste für Betrugsversuche",
+		"hostlist.10.description": "Sperrliste zum Schutz vor nicht vertrauenswürdigen Websites."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist (Anti-Malware/-Spyware)",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Sperrliste von bösartigen Websites, die Malware verbreiten, basiert auf dem Datenbank-Dump von Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprouts Anti-Malware-Liste",
+		"hostlist.12.description": "Dandelion Sprouts Anti-Malware-Liste (für AdGuard Home und für die DNS-Filterung von AdGuard für Android/Windows)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List (Schürfen nach Kryptowährung)",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Werbeblocker-Liste zum Sperren von browserbasiertem Krypto-Mining."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "Die große Liste der angegriffenen Malware-Websites",
+		"hostlist.9.description": "Eine Liste von Websites, die durch Schadsoftware, Ransomware oder Trojaner angegriffen wurden."
 	}
 ]
