--- a/locales/es/filters.json
+++ b/locales/es/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Filtro compuesto por varios filtros (Filtro base, filtro de redes sociales, filtro de protección contra rastreo, filtro para anuncios móviles, EasyList y EasyPrivacy) y está simplificado específicamente para ser compatible con el bloqueo de anuncios a nivel DNS."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Default Blocklist",
+		"hostlist.2.description": "AdAway es un bloqueador de anuncios de código abierto para Android que utiliza el archivo hosts."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Bloqueo de dominios de servidores de anuncios y rastreo."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "Bloquea ciertas trampas emergentes, impide el rastreo del usuario y bloquea la mayoría de los anuncios."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Bloquea anuncios/rastreadores y prioriza la funcionalidad sobre el bloqueo."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
+		"hostlist.23.description": "Bloquea el espionaje y rastreo en Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "Al igual que ahora hay listas para que AdGuard Home y Pi-hole bloqueen anuncios en televisores inteligentes, he aquí un intento de hacer lo mismo para las consolas de videojuegos con AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "Esta es una lista de bloqueo para televisores inteligentes que envían metadatos a casa, a veces con el beneficio adicional de bloquear anuncios en aplicaciones y servicios de películas."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprout's Nordic Filters",
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (para AdGuard Home, y para el filtrado DNS de AdGuard para Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "Polish filters for Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Filtro para bloqueo de anuncios, principalmente en sitios coreanos."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Lista de filtros para bloqueo de anuncios en vietnamita."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Tiene como objetivo deshacerse de anuncios, rastreo, estafas y software malicioso en (principalmente) sitios web suecos."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Archivo hosts provisional para sitios italianos creado a partir de Easylist Italy y ADB X Files."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "Lista de hosts no deseados categorizados."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "Esta es una lista para bloquear dominios no deseados que publican anuncios en sitios web macedonios."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Comprometidos con ser la lista para filtrado de anuncios con la tasa de éxito más alta en la región china, logrando un bloqueo de anuncios preciso y protección de privacidad."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo es un filtro adicional que complementa a EasyList para bloquear los anuncios molestos en sitios en idioma indonesio y malayo."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "Lista de bloqueo para proteger a los usuarios de sitios no confiables."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Lista de bloqueo de sitios web maliciosos que se utilizan para la distribución de malware, basada en el volcado de la base de datos de Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (para AdGuard Home, y para el filtrado DNS de AdGuard para Android/Windows)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Esta es una lista de bloqueo para bloquear la minería de criptomonedas basada en el navegador."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "Lista de sitios web hackeados con malware, ransomware o troyanos."
 	}
 ]
