--- a/locales/fi/filters.json
+++ b/locales/fi/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Suodatin koostuu useista erillisistä suodattimista (AdGuardin vakiosuodatin, sosiaalisen median suodatin, seurannanestosuodatin, mobiilimainosten suodatin, EasyList ja EasyPrivacy) ja se on erityisesti tiivistetty DNS-tason mainosestoon sopivammaksi."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Default Blocklist",
+		"hostlist.2.description": "AdAway on hosts-tiedostoa käyttävä, avoimen lähdekoodin mainosesto Androidille."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Mainonta- ja seurantapalvelinten osoitteilla tapahtuva esto."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "Estää tiettyjä ponnahdusansoja, estää käyttäjäseurannan ja valtaosan mainonnasta."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Estää mainokset/seurannat painottaen eston sijaan toiminnallisuutta."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
+		"hostlist.23.description": "Estää vakoilun ja seurannan Windowsissa."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "Tämä on yritys luoda nykyisten älytelevisioille tarkoitettujen AdGuard Home ja Pi-hole-listojen tapainen AdGuard Home -lista pelikonsoleille."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "Estolista, jonka tarkoitus on estää erityisesti älytelevisioita lähettämästä metatietoja, sekä ajoittain myös sovellusten käyttöliittymien ja videopalveluiden mainoksia."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sproutin pohjoismaiset suodattimet (AdGuard Homelle ja AdGuardin Android- ja Windows-versioiden DNS-suodatukselle)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Puolan Pi-hole-suodattimet",
+		"hostlist.14.description": "Puolankielen Pi-hole-suodattimet."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Estosuodatin mainoksille, lähinnä koreankielisille sivustoille."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Mainosestolista vietnaminkielelle."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Pyrkii estämään mainokset, seurannan ja haittaohjelmat (lähinnä) ruotsinkielisiltä sivustoilta."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Alustava EasyList Italy ja ADB X Files -listoista luotu hosts-tiedosto italiankielisile sivustoille."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Ei-toivotut iranilaiset verkkotunnukset",
+		"hostlist.19.description": "Lista luokitelluista ei-toivotuista osoitteista."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Makedonian Pi-hole-suodattimet",
+		"hostlist.20.description": "Lista ei-toivottujen mainoksia jakelevien verkkotunnusten estoon makedoniankielisillä sivustoilla."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Sitoutunut olemaan kiinankielisen alueen käytetyin mainosten suodatuslista, joka tarjoaa tarkan maainoseston ja yksityisyyden suojauksen."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo on lisäsuodatin EasyListille ärsyttävien mainosten estoon indonesian- ja malesiankielisillä sivustoilla."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "Estolista käyttäjien suojaukseen epäluotettavilla sivustoilla."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Estolista haitallisille sivustoille, joita käytetään haittaohjelmien jakeluun. Perustuu Abuse.ch URLhaus -tietokantaan."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sproutin haittaohjelmavastainen lista (AdGuard Homelle ja AdGuardin Android- ja Windows-versioiden DNS-suodatukselle)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Estolista selainpohjaista kryptovaluutan louhintaa vastaan."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "Lista verkkosivustoista, jotka on saastutettu haittaohjelmilla, lunnasohjelmilla tai troijalaisilla."
 	}
 ]
