--- a/locales/he/tags.json
+++ b/locales/he/tags.json
@@ -1,6 +1,6 @@
 [
 	{
-		"hostlisttag.1.name": "General",
+		"hostlisttag.1.name": "כללי",
 		"hostlisttag.1.description": ""
 	},
 	{
@@ -8,7 +8,7 @@
 		"hostlisttag.4.description": ""
 	},
 	{
-		"hostlisttag.3.name": "",
+		"hostlisttag.3.name": "אזורי",
 		"hostlisttag.3.description": ""
 	},
 	{
@@ -52,7 +52,7 @@
 		"hostlisttag.109.description": ""
 	},
 	{
-		"hostlisttag.2.name": "אבטחה ",
+		"hostlisttag.2.name": "אבטחה",
 		"hostlisttag.2.description": ""
 	}
 ]
