--- a/locales/it/filters.json
+++ b/locales/it/filters.json
@@ -1,94 +1,94 @@
 [
 	{
 		"hostlist.1.name": "Filtro DNS di AdGuard",
-		"hostlist.1.description": "Filtro composto da molti altri (Filtro base di AdGuard, Filtro social media, Filtro annunci per dispositivi, EasyList e EasyPrivacy); semplificato specificatamente per essere maggiormente compatibile con il blocca-annunci a livello DNS."
+		"hostlist.1.description": "Filtro composto da diversi altri (filtro AdGuard di Base, filtro Social Media, filtro Protezione Anti-Monitoraggio, filtro per Dispositivi, EasyList e EasyPrivacy); semplificato specificatamente per essere maggiormente compatibile con il blocca-annunci a livello di DNS."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "Lista nera Predefinita di AdAway",
+		"hostlist.2.description": "AdAway è un'app blocca-annunci open source per Android che utilizza il file degli host."
 	},
 	{
-		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.name": "Lista nera di Peter Lowe",
+		"hostlist.3.description": "Blocco con i nomi degli host dei server di annunci e monitoraggio."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Elenco di Dan Pollock",
+		"hostlist.4.description": "Blocca certe trappole popup, impedisce il monitoraggio dell'utente, blocca gran parte degli annunci."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "Lista nera di Base OISD",
+		"hostlist.5.description": "Blocca annunci/tracciatori e fornisce maggiore priorità alla funzionalità rispetto al blocco."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Regole di monitoraggio host",
+		"hostlist.23.description": "Blocca monitoraggio e tracciamento su Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Elenco Blocca-annunci Dandelion Sprout per console di gioco",
+		"hostlist.6.description": "Proprio come ora esistono elenchi AdGuard Home e Pi-hole per il blocco degli annunci su smart-TV, ecco un mio tentativo di fare lo stesso per le console di videogiochi con AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Lista nera Perflyst e Dandelion Sprout per Smart-TV",
+		"hostlist.7.description": "Questo è una lista nera per impedire l'invio di metadati da casa da parte delle smart-TV, a volte con il beneficio aggiuntivo di bloccare gli annunci dell'interfaccia per app e servizi cinematografici."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Filtri nordici di Dandelion Sprout (per AdGuard Home e per AdGuard DNS-filtrante su Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Elenchi polacchi per Pi hole",
+		"hostlist.14.description": "Filtri polacchi per Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Filtro di blocco per annunci, principalmente su siti coreani."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: Elenco di ABPVN",
+		"hostlist.16.description": "Elenco di filtraggio blocca-annunci vietnamita."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: File Host svedese di Frellwit",
+		"hostlist.17.description": "Mira a liberarsi di annunci, monitoraggi, truffe e badware (principalmente) su siti web svedesi."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri DNS",
+		"hostlist.18.description": "File host provvisorio creato da Easylist Italy e ADB X File per siti italiani."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Domini iraniani indesiderati",
+		"hostlist.19.description": "Elenco degli host classificati come indesiderati."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Lista nera Pi-hole Macedone",
+		"hostlist.20.description": "Questo è un elenco per il blocco dei domini indesiderati che mostrano annunci su siti web macedoni."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-Annuncio",
+		"hostlist.21.description": "Impegnato nell'essere l'elenco di filtraggio degli annunci con il più alto tasso di successo nella regione cinese, ottenendo un preciso blocco degli annunci e protezione della privacy."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo è un filtro aggiuntivo complementare per EasyList che si prefissa l'obiettivo di bloccare fastidiosi annunci su siti in lingua indonesiana e malese."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Lista nera Anti-Truffa di DurableNapkin",
+		"hostlist.10.description": "Una lista nera per proteggere gli utenti da siti inaffidabili."
 	},
 	{
-		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.name": "Lista nera di URL Online Malevoli",
+		"hostlist.11.description": "Una lista nera per siti web dannosi utilizzati per la distribuzione di malware, basato sul dump del database URLhaus di Abuse.ch."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Elenco Anti-Malware di Dandelion Sprout",
+		"hostlist.12.description": "Elenco Anti-Malware di Dandelion Sprout (per AdGuard Home e per AdGuard DNS-filtrante su Android/Windows)."
 	},
 	{
-		"hostlist.8.name": "Lista NoCoin Filter",
-		"hostlist.8.description": ""
+		"hostlist.8.name": "Elenco di Filtraggio di NoCoin",
+		"hostlist.8.description": "Questa è una lista nera di annunci per impedire il mining di criptovalute su browser."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "Il Grande Elenco di Siti Web Compromessi da Malware",
+		"hostlist.9.description": "Un elenco di siti web compromessi da malware, ransomware o trojan."
 	}
 ]
