--- a/locales/pl/filters.json
+++ b/locales/pl/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Filtr złożony z kilku innych filtrów (Podstawowy filtr AdGuard, Filtr mediów społecznościowych, Filtr elementów szpiegujących, Filtr reklam mobilnych, EasyList i EasyPrivacy), który został uproszczony dla lepszej zgodności z blokowaniem reklam na poziomie DNS."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "Domyślna lista blokowania AdAway",
+		"hostlist.2.description": "AdAway to open source'owy bloker reklam dla Androida wykorzystujący plik hosts."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Blokowanie za pomocą nazw hostów serwerów reklam i serwerów śledzących."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "Blokuje niektóre wyskakujące okienka, zapobiega śledzeniu użytkowników, blokuje większość reklam."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Blokuje reklamy/elementy śledzące i przedkłada funkcjonalność nad blokowanie."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - hostuje reguły szpiegujące",
+		"hostlist.23.description": "Blokuj szpiegowanie i śledzenie w systemie Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "Podobnie jak teraz są listy dla AdGuard Home i Pi-hole do blokowania reklam na smart TV, oto moja próba zrobienia tego samego dla konsol do gier wideo z AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "Jest to lista blokad do blokowania Smart-TV wysyłających metadane z powrotem do domu, czasami z dodatkową korzyścią blokowania reklam interfejsu dla aplikacji i usług filmowych."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (dla AdGuard Home, oraz dla filtrowania DNS AdGuard dla Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "Polish filters for Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Filtr blokujący reklamy, głównie na stronach koreańskich."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Lista filtrów Adblock dla języka wietnamskiego."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Ma na celu pozbycie się reklam, śledzenia, oszustw i szkodliwego oprogramowania (głównie) na szwedzkich stronach internetowych."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Wstępny plik hostów dla włoskich witryn utworzony z Easylist Italy i ADB X Files."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "Lista skategoryzowanych niepożądanych hostów."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "To jest lista do blokowania niechcianych domen, które wyświetlają reklamy w witrynach macedońskich."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Zobowiązuje się do bycia najwyższym wskaźnikiem trafień listy filtrowania reklam w regionie Chin, osiągając precyzyjne blokowanie reklam i ochronę prywatności."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo to dodatkowy filtr uzupełniający EasyList w celu blokowania irytujących reklam w witrynach w języku indonezyjskim i malezyjskim."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "Lista blokad chroniąca użytkowników przed niezaufanymi witrynami."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Lista blokowania złośliwych witryn internetowych, które są wykorzystywane do dystrybucji złośliwego oprogramowania, oparta na zrzucie bazy danych z Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (dla AdGuard Home, oraz dla filtrowania DNS AdGuard dla Android/Windows)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Jest to lista blokad reklam, która blokuje wydobywanie kryptowaluty za pomocą przeglądarki."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "Lista stron internetowych, które zostały zhakowane przy użyciu złośliwego oprogramowania, oprogramowania ransomware lub trojanów."
 	}
 ]
