--- a/locales/pt_BR/tags.json
+++ b/locales/pt_BR/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "Geral",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Listas que bloqueiam o rastreamento e a publicidade na maioria dos dispositivos."
 	},
 	{
 		"hostlisttag.4.name": "Outros",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Outras listas de bloqueio."
 	},
 	{
 		"hostlisttag.3.name": "Regional",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Listas focadas em anúncios regionais e servidores de rastreamento."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Bloqueio específico em Norueguês",
+		"hostlisttag.100.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Norueguês."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Bloqueio específico em Polonês",
+		"hostlisttag.101.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Polonês."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Bloqueio específico em Coreano",
+		"hostlisttag.102.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Coreano."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Bloqueio específico em Vietnamita",
+		"hostlisttag.103.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Vietnamita."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Bloqueio específico em Sueco",
+		"hostlisttag.104.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Sueco."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Bloqueio específico em Italiano",
+		"hostlisttag.105.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Italiano."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Bloqueio específico em Iraniano",
+		"hostlisttag.106.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Iraniano."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Bloqueio específico em Macedônio",
+		"hostlisttag.107.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Macedônio."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Bloqueio específico em Chinês",
+		"hostlisttag.108.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Chinês."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Bloqueio específico em Indonésio",
+		"hostlisttag.109.description": "Projetado especificamente para bloquear anúncios ou outro conteúdo indesejado em Indonésio."
 	},
 	{
 		"hostlisttag.2.name": "Segurança",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Listas projetadas especificamente em bloquear domínios maliciosos, de phishing e fraude."
 	}
 ]
