--- a/locales/ru/filters.json
+++ b/locales/ru/filters.json
@@ -4,83 +4,83 @@
 		"hostlist.1.description": "Фильтр, составленный из нескольких фильтров (Базовый фильтр AdGuard, Фильтр социальных сетей, Фильтр счетчиков и систем аналитики, Фильтр мобильной рекламы, EasyList и EasyPrivacy), и специально упрощенный, чтобы быть лучше совместимым с блокировкой рекламы на уровне DNS."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Default Blocklist",
+		"hostlist.2.description": "AdAway — это блокировщик рекламы для Android с открытым исходным кодом, использующий файл hosts."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
 		"hostlist.3.description": ""
 	},
 	{
-		"hostlist.4.name": "",
+		"hostlist.4.name": "Dan Pollock's List",
 		"hostlist.4.description": ""
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Блокирует рекламу и трекеры и ставит функциональность выше блокировки."
 	},
 	{
-		"hostlist.23.name": "",
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
 		"hostlist.23.description": ""
 	},
 	{
-		"hostlist.6.name": "",
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
 		"hostlist.6.description": ""
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "Это список, блокирующий отправку метаданных умными телевизорами, а также рекламу в приложениях и стриминговых сервисах."
 	},
 	{
-		"hostlist.13.name": "",
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
 		"hostlist.13.description": ""
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "Польские фильтры для Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
+		"hostlist.15.name": "KOR: YousList",
 		"hostlist.15.description": ""
 	},
 	{
-		"hostlist.16.name": "",
+		"hostlist.16.name": "VNM: ABPVN List",
 		"hostlist.16.description": ""
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Избавляет от рекламы, трекеров, мошеннического и вредоносного ПО на шведских сайтах."
 	},
 	{
-		"hostlist.18.name": "",
+		"hostlist.18.name": "ITA: Filtri-DNS",
 		"hostlist.18.description": ""
 	},
 	{
-		"hostlist.19.name": "",
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
 		"hostlist.19.description": ""
 	},
 	{
-		"hostlist.20.name": "",
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
 		"hostlist.20.description": ""
 	},
 	{
-		"hostlist.21.name": "",
+		"hostlist.21.name": "CHN: anti-AD",
 		"hostlist.21.description": ""
 	},
 	{
-		"hostlist.22.name": "",
+		"hostlist.22.name": "IDN: ABPindo",
 		"hostlist.22.description": ""
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "Список блокировки, защищающий пользователей от ненадёжных сайтов."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Список блокировки сайтов, которые используются для распространения вредоносного ПО, базирующийся на дампе базы данных abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
 		"hostlist.12.description": ""
 	},
 	{
@@ -88,7 +88,7 @@
 		"hostlist.8.description": ""
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "Список сайтов, которые заражены вредоносным ПО, вирусами-вымогателями или троянами."
 	}
 ]
