--- a/locales/sk/tags.json
+++ b/locales/sk/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Zoznamy, ktoré blokujú sledovanie a reklamu na väčšine zariadení."
 	},
 	{
 		"hostlisttag.4.name": "Iné",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Iné blokovacie zoznamy."
 	},
 	{
 		"hostlisttag.3.name": "Regionálne",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Zoznamy zamerané na regionálne reklamy a sledovacie servery."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Blokovanie reklamy v nórskom jazyku",
+		"hostlisttag.100.description": "Navrhnuté špecificky na blokovanie reklám na webových stránkach v nórskom jazyku."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Blokovanie reklamy v poľskom jazyku",
+		"hostlisttag.101.description": "Navrhnuté špecificky na blokovanie reklám na webových stránkach v poľskom jazyku."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Blokovanie reklamy v kórejskom jazyku",
+		"hostlisttag.102.description": "Určené špecificky na zablokovanie reklám na webových stránkach v kórejskom jazyku."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Blokovanie reklamy vo vietnamskom jazyku",
+		"hostlisttag.103.description": "Navrhnuté špecificky na blokovanie reklám na webových stránkach vo vietnamskom jazyku."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Blokovanie reklamy vo švédskom jazyku",
+		"hostlisttag.104.description": "Navrhnuté špecificky na blokovanie reklám na webových stránkach vo švédskom jazyku."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Blokovanie reklamy v talianskom jazyku",
+		"hostlisttag.105.description": "Navrhnuté špecificky na blokovanie reklám na webových stránkach v talianskom jazyku."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Blokovanie reklamy vo farskom jazyku",
+		"hostlisttag.106.description": "Navrhnuté špecificky na blokovanie reklám na webových stránkach vo farskom jazyku."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Blokovanie reklamy v macedónskom jazyku",
+		"hostlisttag.107.description": "Navrhnuté špecificky na blokovanie reklám na webových stránkach v macedónskom jazyku."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Blokovanie reklamy v čínskom jazyku",
+		"hostlisttag.108.description": "Navrhnuté špecificky na blokovanie reklám na webových stránkach v čínskom jazyku."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Blokovanie reklamy v indonézskom jazyku",
+		"hostlisttag.109.description": "Navrhnuté špecificky na blokovanie reklám na webových stránkach v indonézskom jazyku."
 	},
 	{
 		"hostlisttag.2.name": "Bezpečnosť",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Zoznamy určené špeciálne na blokovanie škodlivých, phishingových a podvodníckych domén."
 	}
 ]
