--- a/locales/sl/filters.json
+++ b/locales/sl/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Filter, sestavljen iz več drugih filtrov (AdGuard Osnovni filter, Filter družbenih medijev, Filter zaščite sledenja, Filter mobilnih oglasov, EasyList and EasyPrivacy) in poenostavljen posebej, da je bolj združljiv z zaviranjem oglasov na ravni DNS."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Privzeti seznam onemogočenih",
+		"hostlist.2.description": "AdAway je odprtokodni zaviralec oglasov za Android z uporabo datoteke gostiteljev."
 	},
 	{
 		"hostlist.3.name": "Peter Lovesow seznam zaviranja",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Zaviranje z oglasnim strežnikom in imeni gostiteljev strežnikov za sledenje."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollockov seznam",
+		"hostlist.4.description": "Zavira določene pasti pojavnih oken, preprečuje sledenje uporabnikom, onemogoča večino oglaševanja."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Osnovni seznam onemogočenih",
+		"hostlist.5.description": "Zavira oglase/sledilnike in daje prednost funkcionalnosti pred onemogočanjem."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - gosti vohunska pravila",
+		"hostlist.23.description": "Onemogočite vohunjenje in sledenje v Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Seznam onemogočenih oglasov igralne konzole Dandelion Sprout",
+		"hostlist.6.description": "Podobno kot zdaj obstajajo seznami za AdGuard Home in Pi-hole za zaviranje oglasov na pametnih televizorjih, je tukaj moj poskus, kako narediti enako za konzole za videoigre z AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV seznam onemogočenih",
+		"hostlist.7.description": "To je seznam onemogočenih za zaviranje pametnih televizorjev, ki pošiljajo metapodatke domov, včasih z dodatno prednostjo zaviranja vmesniških oglasov za aplikacije in filmskih storitev."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Nordijski filtri Dandelion Sprouta",
+		"hostlist.13.description": "Nordijski filtri Dandelion SproutA (za AdGuard Home in za AdGuard, za filtriranje DNS za Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Poljski filtri za Pi luknjo",
+		"hostlist.14.description": "Poljski filtri za Pi luknjo."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: Yous seznam",
+		"hostlist.15.description": "Filter za zaviranje oglasov, predvsem na korejskih spletnih straneh."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: Seznam ABPVN",
+		"hostlist.16.description": "Vieatnamski seznam filtrov za zaviranje oglasov."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwitov švedski filter",
+		"hostlist.17.description": "Cilj je znebiti se oglasov, sledenja, prevar in zlonamernih programov na (večinoma) švedskih spletnih straneh."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri DNS",
+		"hostlist.18.description": "Poskusna datoteka gostiteljev za italijanske spletne strani, ustvarjenr iz datotek Easylist Italy in ADB X."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Neželene iranske domene",
+		"hostlist.19.description": "Seznam kategoriziranih nezaželenih gostiteljev."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Makedonski Pi-luknja seznam onemogočenih",
+		"hostlist.20.description": "To je seznam za zaviranje neželenih domen, ki prikazujejo oglase na makedonskih spletnih straneh."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: proti oglasom",
+		"hostlist.21.description": "Zavezani k temu, da bodo seznami za filtriranje oglasov z najvišjo stopnjo zadetkov v kitajski regiji, ki bodo dosegli natančno onemogočanje oglasov in zaščito zasebnosti."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo je dodaten filter, ki dopolnjuje EasyList za onemogočanje nadležnih oglasov na spletnih straneh v indonezijskem in malezijskem jeziku."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Seznam onemogočenih prevar DurableNapkina",
+		"hostlist.10.description": "Seznam onemogočenih za zaščito uporabnikov pred nezanesljivimi spletnimi stranmi."
 	},
 	{
 		"hostlist.11.name": "Spletni seznam onemogočenih zlonamernih URL-jev",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Seznam onemogočenih zlonamernih spletnih strani, ki se uporabljajo za razdeljevanje zlonamernih programov, ki temelji na izpisu zbirke podatkov Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Seznam Dandelion Sprouta proti zlonamernmi programi",
+		"hostlist.12.description": "Seznam Dandelion Sprout proti zlonamernm programom (za AdGuard Home in za AdGuard za filtriranje DNS za Android/Windows)."
 	},
 	{
 		"hostlist.8.name": "Seznam filtrov NoCoin",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "To je seznam za zaviranje oglasov za onemogočanje kripto rudarjenja v brskalniku."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "Velik seznam vkradenih spletnih strani z zlonamernimi programi",
+		"hostlist.9.description": "Seznam spletnih strani, ki so vkradene z zlonamernimi programi, izsiljevalskimi programi ali trojanci."
 	}
 ]
