--- a/locales/sl/tags.json
+++ b/locales/sl/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Seznami, ki zavirajo sledenje in oglaševanje na večini naprav."
 	},
 	{
 		"hostlisttag.4.name": "Ostalo",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Drugi seznami onemogočenih."
 	},
 	{
 		"hostlisttag.3.name": "Področno",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Seznami, ki so osredotočeni na področne oglase in strežnike za sledenje."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Zaviranje za norveški jezik",
+		"hostlisttag.100.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v norveškem jeziku."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Zaviranje oglasov, specifičnih za poljščino",
+		"hostlisttag.101.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v poljskem jeziku."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Zaviranje za korejski jezik",
+		"hostlisttag.102.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v korejskem jeziku."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Zaviranje za vietnamski jezik",
+		"hostlisttag.103.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v vietnamskem jeziku."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Zaviranje za švedski jezik",
+		"hostlisttag.104.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v švedskem jeziku."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Zaviranje za italijanski jezik",
+		"hostlisttag.105.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v italijanskem jeziku."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Zaviranje za iranski jezik",
+		"hostlisttag.106.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v iranskem jeziku."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Zaviranje za makedonski jezik",
+		"hostlisttag.107.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v makedonskem jeziku."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Zaviranje za kitajski jezik",
+		"hostlisttag.108.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v kitajskem jeziku."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Zaviranje za indonezijski jezik",
+		"hostlisttag.109.description": "Zasnovan posebej za zaviranje oglasov ali druge neželene vsebine v indonezijskem jeziku."
 	},
 	{
 		"hostlisttag.2.name": "Varnost",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Seznami, zasnovani posebej za zaviranje zlonamernih, lažnih in prevarantskih domen."
 	}
 ]
