--- a/locales/tr/filters.json
+++ b/locales/tr/filters.json
@@ -1,94 +1,94 @@
 [
 	{
 		"hostlist.1.name": "AdGuard DNS filtresi",
-		"hostlist.1.description": "Temel olarak, birkaç filtreyi birleştirir (AdGuard Temel filtresi, Sosyal medya filtresi, İzleme Koruması filtresi, Mobil Reklam filtresi, EasyList filtresi ve EasyPrivacy filtresi) ve DNS ile daha iyi filtreleme ile reklam engellemek için basitleştirilmiş filtreleri kullanır."
+		"hostlist.1.description": "Temel olarak birkaç filtreyi birleştirir (AdGuard Temel filtresi, Sosyal Medya filtresi, İzleme Koruması filtresi, Mobil Reklam filtresi, EasyList ve EasyPrivacy) ve DNS düzeyinde reklam engellemeyle daha uyumlu olması için özel olarak basitleştirilmiştir."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Default Blocklist",
+		"hostlist.2.description": "AdAway, alan adı dosyasını kullanır ve Android için açık kaynaklı bir reklam engelleyicidir."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Reklam ve izleyici sunucularını alan adı ile engeller."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "Belirli açılır pencereleri, kullanıcı izlemesini ve çoğu reklamı engeller."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Reklamları ve izleyicileri engeller, ayrıca engelleme yerine işlevselliğe öncelik verir."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
+		"hostlist.23.description": "Windows'ta casusluğu ve izlemeyi engeller."
 	},
 	{
-		"hostlist.6.name": "",
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
 		"hostlist.6.description": ""
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "Uygulamalar ve film hizmetleri için arayüz reklamlarını engelleme avantajıyla birlikte, akıllı TV'lerin gönderdiği meta verilerini engellemek için bir engel listesidir."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (AdGuard Home, Windows ve Android için AdGuard DNS filtreleme)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "Polish filters for Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Özellikle Korece sitelerde reklamları engelleyen filtre."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Vietnamca için reklam engelleme filtre listesi."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Çoğunlukla İsveççe sitelerdeki reklamlardan, izleme, dolandırıcılık ve kötü amaçlı yazılımlardan kurtulmayı amaçlar."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "EasyList Italy ve ADB X Files ile oluşturulan, İtalyanca dilindeki siteler için belirsiz alan adı dosyası."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "Kategorilere ayrılmış istenmeyen alan adlarının listesi."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "Makedonca internet sitelerinde reklam sunan istenmeyen alan adlarını engelleyen liste."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Kesin reklam engelleme ve gizlilik koruması sağlayarak Çin bölgesindeki en etkili reklam filtreleme listesi olmaya kararlıdır."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo, Endonezyaca ve Malezyaca dillerindeki can sıkıcı reklamları engellemek için EasyList'i tamamlayan ek bir filtredir."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "Kullanıcıları, güvenilmez sitelere karşı korumak için bir engel listesi."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Abuse.ch URLhaus'un veri tabanına dayalı olarak, kötü amaçlı yazılım dağıtımı için kullanılan kötü amaçlı internet sitelerinin engel listesi."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (AdGuard Home, Windows ve Android için AdGuard DNS filtreleme)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Tarayıcı tabanlı kripto madenciliğini engellemek için reklam engelleme listesi."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "Kötü amaçlı yazılım, fidye yazılımı veya truva atı ile saldırıya uğrayan internet sitelerinin listesi."
 	}
 ]
