--- a/locales/zh/filters.json
+++ b/locales/zh/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "此过滤器由其他几个过滤器（AdGuard 基础过滤器、社交媒体过滤器、防跟踪保护过滤器、移动广告过滤器、EasyList 和 EasyPrivacy）组成，并经过简化，以便更好地与 DNS 级别的广告拦截兼容。"
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Default Blocklist",
+		"hostlist.2.description": "AdAway 是使用 host 文件的 Android 开源广告拦截器。"
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "使用广告服务器和跟踪服务器主机名进行阻止。"
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "阻止某些弹出式陷阱，阻止用户跟踪，阻止大多数广告。"
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "阻止广告/跟踪器并优先考虑功能而不是阻止。"
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
+		"hostlist.23.description": "在 Windows 上阻止间谍和跟踪。"
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "就像现在有 AdGuard Home 和 Pi-hole 列表来阻止智能电视上的广告一样，这是我尝试对带有 AdGuard Home 的视频游戏机做同样的事情。"
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "这是一个阻止智能电视将元数据发送回家的阻止列表，有时还具有阻止应用程序和电影服务的界面广告的额外好处。"
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sprout 的 Nordic 过滤器（用于 AdGuard Home 和 AdGuard for Android/Windows 的 DNS 过滤）。"
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "用于 Pi hole 的波兰过滤器"
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "用于韩国网站上广告拦截的过滤器。"
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "用于越南语的 Adblock 过滤列表。"
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "旨在消除（主要是）瑞典网站上的广告、跟踪、诈骗和恶意软件。"
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "在 Easylist Italy 和 ADB X Files 上创建的意大利网站的暂定主机文件。"
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "不受欢迎的主机列表。"
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "这是在马其顿网站上阻止访问托管广告的网域的拦截列表。"
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "致力于成为中国地区点击率最高的广告过滤列表，实现精准的广告拦截和隐私保护。"
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo 是补充 EasyList 的附加过滤器，可阻止印度尼西亚语和马来西亚语网站上的烦人广告。"
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "防止用户访问不可靠网站的拦截列表。"
 	},
 	{
 		"hostlist.11.name": "在线恶意URL拦截列表",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "基于 Abuse.ch URLhaus 的数据库转储的恶意网站拦截列表。"
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sprout 的 Anti-Malware 列表（用于 AdGuard Home 和 AdGuard for Android/Windows 的 DNS 过滤）。"
 	},
 	{
 		"hostlist.8.name": "NoCoin 过滤列表",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "这是一个广告拦截列表，用于阻止基于浏览器的加密货币开采。"
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "一个被恶意软件、勒索软件或木马病毒入侵的网站列表。"
 	}
 ]
