--- a/locales/zh/tags.json
+++ b/locales/zh/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "在大多数设备上阻止跟踪和广告的列表."
 	},
 	{
 		"hostlisttag.4.name": "其它",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "其他拦截列表。"
 	},
 	{
 		"hostlisttag.3.name": "区域",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "专注于区域广告和跟踪服务器的列表."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Norvegian language-specific blocking",
+		"hostlisttag.100.description": "专门设计用于屏蔽挪威语网页上的广告及不想看到的内容。"
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Polish language-specific blocking",
+		"hostlisttag.101.description": "专门设计用于屏蔽波兰语网页上的广告及不想看到的内容。"
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Korean language-specific blocking",
+		"hostlisttag.102.description": "专门设计用于屏蔽韩语网页上的广告及不想看到的内容。"
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Vietnamese language-specific blocking",
+		"hostlisttag.103.description": "专门设计用于屏蔽越南语网页上的广告及不想看到的内容。"
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Swedish language-specific blocking",
+		"hostlisttag.104.description": "专门设计用于屏蔽瑞典语网页上的广告及不想看到的内容。"
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Italian language-specific blocking",
+		"hostlisttag.105.description": "专门设计用于屏蔽意大利语网页上的广告及不想看到的内容。"
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Iranian language-specific blocking",
+		"hostlisttag.106.description": "专门设计用于屏蔽伊朗语网页上的广告及不想看到的内容。"
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Makedonian language-specific blocking",
+		"hostlisttag.107.description": "专门设计用于屏蔽马其顿语网页上的广告及不想看到的内容。"
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Chinese language-specific blocking",
+		"hostlisttag.108.description": "专门设计用于屏蔽汉语网页上的广告及不想看到的内容。"
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Indonesian language-specific blocking",
+		"hostlisttag.109.description": "专门设计用于屏蔽印尼语网页上的广告及不想看到的内容。"
 	},
 	{
 		"hostlisttag.2.name": "安全",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "专用于拦截恶意软件、钓鱼或欺诈域名的列表。"
 	}
 ]
