--- a/locales/be/filters.json
+++ b/locales/be/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Фільтр, складзены з некалькіх фільтраў (Базавы фільтр AdGuard, Фільтр сацыяльных сетак, Фільтр лічыльнікаў і сістэм аналітыкі, Фільтр мабільнай рэкламы, EasyList і EasyPrivacy), і адмыслова спрошчаны, каб быць лепш сумяшчальным з блакаваннем рэкламы на роўні DNS."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Default Blocklist",
+		"hostlist.2.description": "AdAway — гэта блакавальнік рэкламы для Android з адкрытым выточным кодам, які выкарыстоўвае файл hosts."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Блакаванне з дапамогай імёнаў хастоў сервераў рэкламы і сервераў асочвання."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "Блакуе некаторыя ўсплыўныя вокны, прадухіляе асочванне карыстачоў, блакуе большасць рэкламы."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Блакуе рэкламу і трэкеры і ставіць функцыйнасць вышэйшая за блакаванне."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Правілы шпіёна хастоў",
+		"hostlist.23.description": "Блакуе шпіянаж і асочванне ў Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "Падобна на тое, як цяпер існуюць спісы для Adguard Home і Pi-hole для блакавання рэкламы на смарт-тэлевізарах, вось мая спроба зрабіць тое ж самае для гульнявых кансоляў з Adguard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "Гэта спіс блакаванняў для блакавання смарт-тэлевізараў адпраўляючы метададзеныя назад дахаты, часам з дадатковай перавагай блакавання рэкламы ў інтэрфейсе дадаткаў і кінасэрвісаў."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (для AdGuard Home, гэтак жа для фiльтравання DNS AdGuard для Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "Польскія фільтры для Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Фільтр для блакавання рэкламы, галоўным чынам на карэйскіх сайтах."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Спіс фільтраў Adblock для в'етнамцаў."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Пазбаўляе ад рэкламы, трэкераў, махлярскага і шкоднага ПA на шведскіх сайтах."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Папярэдні файл hosts для італьянскіх сайтаў, створаны з файлаў Easylist Italy і ADB X."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "Спіс катэгарызаваных непажаданых хастоў."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "Гэта спіс для блакавання непажаданых даменаў, якія месцяць рэкламу на македонскіх сайтах."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Імкнецца быць самым папулярным спісам фільтрацыі рэкламы ў кітайскім рэгіёне, забяспечваючы дакладнае блакаванне рэкламы і абарону прыватнасці."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo - гэта дадатковы фільтр у дадатак да EasyList для блакавання дакучлівай рэкламы на сайтах на інданезійскай і малазійскай мовах."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "Спіс блакавання, што бароніць карыстачоў ад ненадзейных сайтаў."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Спіс блакавання сайтаў, якія выкарыстоўваюцца для шырання шкоднага ПА, які базуецца на дампе базы даных abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (для AdGuard Home, гэтак жа для фiльтравання DNS AdGuard для Android/Windows)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Гэта спіс блакавання рэкламы для блакавання крыпта-майнінгу на грунце браўзара."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "Спіс сайтаў, якія заражаны шкодным ПА, вірусамі-вымагальнікамі ці траянамі."
 	}
 ]
