--- a/locales/da/filters.json
+++ b/locales/da/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Filter sammensat af flere forskellige filtre (AdGuard Basis-, Social Medie-, Sporingsbeskyttelses- og Mobilannoncefiltre, EasyList og EasyPrivacy) forenklet specifikt for bedre kompatibilitet med DNS-niveau adblovking."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Default Blocklist",
+		"hostlist.2.description": "AdAway er en open-source, hosts-fil baseret adblocker til Android."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Blokering vha. annonceserver og sporing af serverværtsnavne."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "Blokerer visse pop-up fælder og de fleste reklamer samt forhindrer brugersporing."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Blokerer annoncer/trackere og prioriterer funktionalitet over blokering."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
+		"hostlist.23.description": "Bloker udspionering og sporing på Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "Ligesom der nu er lister til AdGuard Home og Pi-hole til at blokere annoncer på Smart-TV'er, er her et forsøg fra mig på at gøre det samme for videospilskonsoller med AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "Dette er en blokeringsliste til at blokere Smart-TV'er, som sender metadata hjem, nogle gange med den ekstra fordel at blokere grænsefladeannoncer for apps og filmtjenester."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (til AdGuard Home og AdGuard til Androids/Windows' DNS-filtering)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polske filtre til Pi-hole",
+		"hostlist.14.description": "Polske filtre til Pi-hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Blokeringsfilter til annoncer på fortrinsvis koreanske websteder."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Adblockfilterliste til vietnamesisk."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Sigter mod at slippe af med annoncer, sporing, svindel og badware på (fortrinsvis) svenske websteder."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Foreløbig hosts-fil til italienske websteder oprettet fra Easylist Italy og ADB X Files."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "Liste over kategoriserede, uønskede værter."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "Dette er en liste til at blokere uønskede domæner, som viser annoncer på makedonske websteder."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Dedikeret til at være den højeste hitrate annoncefiltreringsliste i den kinesiske region, opnå præcis adblocking og fortrolighedsbeskyttelse."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo er et ekstra filter til at supplere EasyList for at blokere irriterende annoncer på indonesisk- og malaysisksprogede websteder."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "En blokeringsliste til at beskytte brugere mod utroværdige websteder."
 	},
 	{
 		"hostlist.11.name": "Online Skadelig URL-blokeringsliste",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "En blokeringsliste over ondsindede websteder brugt til malware-distribution, baseret på databasedumpet fra Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (til AdGuard Home og AdGuard til Androids/Windows' DNS-filtering)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Dette er en adblockliste til at blokere browserbaseret kryptomining."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "En liste over websteder, som er hacket med malware, ransomware eller trojanske heste."
 	}
 ]
