--- a/locales/de/tags.json
+++ b/locales/de/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "Allgemein",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Listen, die Tracking und Werbung auf den meisten Geräten sperren."
 	},
 	{
-		"hostlisttag.4.name": "Sonstiges",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.name": "Weitere",
+		"hostlisttag.4.description": "Weitere Sperrlisten."
 	},
 	{
 		"hostlisttag.3.name": "Regional",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Listen mit Fokus auf regionale Anzeigen und Tracking-Server."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Sperren von Werbung auf norwegischsprachigen Websites",
+		"hostlisttag.100.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in norwegischer Sprache."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Sperren von Werbung auf polnischsprachigen Websites",
+		"hostlisttag.101.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in polnischer Sprache."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Sperren von Werbung auf koreanischsprachigen Websites",
+		"hostlisttag.102.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in koreanischer Sprache."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Sperren von Werbung auf vietnamesischsprachigen Websites",
+		"hostlisttag.103.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in vietnamesischer Sprache."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Sperren von Werbung auf schwedischsprachigen Websites",
+		"hostlisttag.104.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in schwedischer Sprache."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Sperren von Werbung auf italienischsprachigen Websites",
+		"hostlisttag.105.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in italienischer Sprache."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Sperren von Werbung auf iranischsprachigen Websites",
+		"hostlisttag.106.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in iranischer Sprache."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Sperren von Werbung auf makedonischen Websites",
+		"hostlisttag.107.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in mazedonischer Sprache."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Sperren von Werbung auf chinesischsprachigen Websites",
+		"hostlisttag.108.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in chinesischer Sprache."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Sperren von Werbung auf indonesischsprachigen Websites",
+		"hostlisttag.109.description": "Erstellt zum Sperren von Werbung oder anderen unerwünschten Inhalten in indonesischer Sprache."
 	},
 	{
 		"hostlisttag.2.name": "Sicherheit",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Listen, die auf das Sperren von Malware, Phishing- oder betrügerischen Domains spezialisiert sind."
 	}
 ]
