--- a/locales/es/tags.json
+++ b/locales/es/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Listas que bloquean rastreadores y anuncios en la mayoría de los dispositivos."
 	},
 	{
 		"hostlisttag.4.name": "Otros",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Otras listas de bloqueo."
 	},
 	{
 		"hostlisttag.3.name": "Regional",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Listas que se centran en anuncios regionales y servidores de rastreo."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Bloqueo de anuncios en noruego",
+		"hostlisttag.100.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma noruego."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Bloqueo de anuncios en polaco",
+		"hostlisttag.101.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma polaco."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Bloqueo de anuncios en coreano",
+		"hostlisttag.102.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma coreano."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Bloqueo de anuncios en vietnamita",
+		"hostlisttag.103.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma vietnamita."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Bloqueo de anuncios en sueco",
+		"hostlisttag.104.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma sueco."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Bloqueo de anuncios en italiano",
+		"hostlisttag.105.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma italiano."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Bloqueo de anuncios en iraní",
+		"hostlisttag.106.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma iraní."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Bloqueo de anuncios en macedonio",
+		"hostlisttag.107.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma macedonio."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Bloqueo de anuncios en chino",
+		"hostlisttag.108.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma chino."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Bloqueo de anuncios en indonesio",
+		"hostlisttag.109.description": "Diseñado específicamente para bloquear anuncios u otro contenido no deseado en idioma indonesio."
 	},
 	{
 		"hostlisttag.2.name": "Seguridad",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Listas diseñadas específicamente para bloquear dominios de malware, phishing y estafa."
 	}
 ]
