--- a/locales/fi/tags.json
+++ b/locales/fi/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "Yleiset",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Listat, jotka estävät seurannan ja mainokset useimmilla laitteilla."
 	},
 	{
 		"hostlisttag.4.name": "Muut",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Muut estolistat."
 	},
 	{
 		"hostlisttag.3.name": "Alueelliset",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Alueellisiin mainoksiin ja seurantapalvelimiin keskittyvät listat."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Norjan kielikohtainen esto",
+		"hostlisttag.100.description": "Suunniteltu erityisesti norjankielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Puolan kielikohtainen esto",
+		"hostlisttag.101.description": "Suunniteltu erityisesti puolankielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Korean kielikohtainen esto",
+		"hostlisttag.102.description": "Suunniteltu erityisesti koreankielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Vietnamin kielikohtainen esto",
+		"hostlisttag.103.description": "Suunniteltu erityisesti vietnaminkielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Ruotsin kielikohtainen esto",
+		"hostlisttag.104.description": "Suunniteltu erityisesti ruotsinkielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Italian kielikohtainen esto",
+		"hostlisttag.105.description": "Suunniteltu erityisesti italiankielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Iranin kielikohtainen esto",
+		"hostlisttag.106.description": "Suunniteltu erityisesti iraninkielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Makedonian kelikohtainen esto",
+		"hostlisttag.107.description": "Suunniteltu erityisesti makedoniankielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Kiinan kielikohtainen esto",
+		"hostlisttag.108.description": "Suunniteltu erityisesti kiinankielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Indonesian kielikohtainen esto",
+		"hostlisttag.109.description": "Suunniteltu erityisesti indonesiankielisten mainosten ja ei-toivotun sisällön estoon."
 	},
 	{
 		"hostlisttag.2.name": "Turvallisuus",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Tietojenkalastelu-, huijaus- ja muiden haitallisten verkkotunnusten estoon erikoistuneet listat."
 	}
 ]
