--- a/locales/it/tags.json
+++ b/locales/it/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Elenchi per il blocco dei tracciatori e degli annunci sulla maggior parte dei dispositivi."
 	},
 	{
 		"hostlisttag.4.name": "Altro",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Altre liste nere."
 	},
 	{
 		"hostlisttag.3.name": "Regionale",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Elenchi focalizzati su annunci regionali e server tracciatori."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Blocchi specifici per la lingua norvegese",
+		"hostlisttag.100.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in norvegese."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Blocco specifico per lingua polacca",
+		"hostlisttag.101.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in polacco."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Blocco specifico per lingua coreana",
+		"hostlisttag.102.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in coreano."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Blocco specifico per lingua vietnamita",
+		"hostlisttag.103.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in vietnamita."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Blocco specifico per lingua svedese",
+		"hostlisttag.104.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in svedese."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Blocco specifico per lingua italiana",
+		"hostlisttag.105.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in italiano."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Blocco specifico per lingua iraniana",
+		"hostlisttag.106.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in iraniano."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Blocco specifico per lingua macedone",
+		"hostlisttag.107.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in macedone."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Blocco specifico per lingua cinese",
+		"hostlisttag.108.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in cinese."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Blocco specifico per la lingua indonesiana",
+		"hostlisttag.109.description": "Progettato specificatamente per il blocco degli annunci o altro contenuto indesiderato in indonesiano."
 	},
 	{
 		"hostlisttag.2.name": "Sicurezza",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Elenchi progettati specificamente per bloccare domini malevoli, di phishing o truffa."
 	}
 ]
