--- a/locales/nl/filters.json
+++ b/locales/nl/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Filter samengesteld uit diverse andere filters (AdGuard Base filter, Social Media filter, Tracking Protection filter, Mobile Ads filter, EasyList and EasyPrivacy) en vereenvoudigd om beter compatibel te zijn met DNS-level adblocking."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway standaard blokkeerlijst",
+		"hostlist.2.description": "AdAway is een open source advertentieblokkeerder voor Android die het hosts-bestand gebruikt."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Blokkeren met advertentieserver en trackingserverhostnamen."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's lijst",
+		"hostlist.4.description": "Blokkeert bepaalde pop-upvallen, voorkomt het volgen van gebruikers, blokkeert de meeste advertenties."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD basis blokkeerlijst",
+		"hostlist.5.description": "Blokkeert advertenties/volgers en geeft prioriteit aan functionaliteit boven blokkering."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spionageregels",
+		"hostlist.23.description": "Spionage en volgers op Windows blokkeren."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's lijst met advertentieblokkeringen voor gameconsoles",
+		"hostlist.6.description": "Net zoals er nu lijsten zijn voor AdGuard Home en Pi-hole om advertenties op smart-tv's te blokkeren, is hier een poging van mij om hetzelfde te doen voor videogameconsoles met AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst en Dandelion Sprout's Smart-TV blokkeerlijst",
+		"hostlist.7.description": "Dit is een blokkeerlijst om smart-tv's te blokkeren die metadata naar huis sturen, soms met het extra voordeel dat interface-advertenties voor apps en filmservices worden geblokkeerd."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts Noors filter",
+		"hostlist.13.description": "Dandelion Sprout Noors filter (voor AdGuard Home en voor AdGuard voor DNS-filtering van Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Poolse filters voor Pi-hole",
+		"hostlist.14.description": "Poolse filters voor Pi-hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Blokkeerfilter voor advertenties, voornamelijk op Koreaanse sites."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN lijst",
+		"hostlist.16.description": "AdBlock filterlijst voor Vietnamees."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Zweeds hosts-bestand",
+		"hostlist.17.description": "Streeft ernaar om advertenties, volgers, oplichting en badware op (voornamelijk) Zweedse websites te verwijderen."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Voorlopig hosts-bestand voor Italiaanse sites gemaakt op basis van Easylist Italy en ADB X bestanden."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Ongewenste Iraanse domeinen",
+		"hostlist.19.description": "Lijst met gecategoriseerde ongewenste hosts."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonische Pi-hole blokkeerlijst",
+		"hostlist.20.description": "Lijst om ongewenste domeinen te blokkeren die advertenties weergeven op Macedonische websites."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Bedoelt om de lijst met advertentiefilters met de hoogste hitrate in de Chinese regio te zijn, met nauwkeurige advertentieblokkering en privacybescherming."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo is een extra filter als aanvulling op EasyList om vervelende advertenties op sites in de Indonesische en Maleisische taal te blokkeren."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam blokkeerlijst van DurableNapkin",
+		"hostlist.10.description": "Blokkeerlijst om gebruikers te beschermen tegen onbetrouwbare sites."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Blokkeerlijst van kwaadaardige websites die worden gebruikt voor malwaredistributie, gebaseerd op de databasedump van Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-malwarelijst",
+		"hostlist.12.description": "Dandelion Sprout's anti-malwarelijst (voor AdGuard Home en voor AdGuard voor Android/Windows' DNS-filtering)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Advertentieblokkeerlijst om browsergebaseerde crypto-mining te blokkeren."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "De grote lijst met gehackte malwarewebsites",
+		"hostlist.9.description": "Een lijst met websites die zijn gehackt met malware, ransomware of trojans."
 	}
 ]
