--- a/locales/nl/tags.json
+++ b/locales/nl/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Lijsten die het volgen en adverteren op de meeste apparaten blokkeren."
 	},
 	{
 		"hostlisttag.4.name": "Overige",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Overige blokkeerlijsten."
 	},
 	{
 		"hostlisttag.3.name": "Regionaal",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Lijsten die zich richten op regionale advertenties en trackingservers."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Noorse taalspecifieke blokkering",
+		"hostlisttag.100.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Noorse taal te blokkeren."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Poolse taalspecifieke blokkering",
+		"hostlisttag.101.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Poolse taal te blokkeren."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Koreaanse taalspecifieke blokkering",
+		"hostlisttag.102.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Koreaanse taal te blokkeren."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Vietnamese taalspecifieke blokkering",
+		"hostlisttag.103.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Vietnamese taal te blokkeren."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Zweedse taalspecifieke blokkering",
+		"hostlisttag.104.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Zweedse taal te blokkeren."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Italiaanse taalspecifieke blokkering",
+		"hostlisttag.105.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Italiaanse taal te blokkeren."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Iraanse taalspecifieke blokkering",
+		"hostlisttag.106.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Iraanse taal te blokkeren."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Macedonische taalspecifieke blokkering",
+		"hostlisttag.107.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Macedonische taal te blokkeren."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Chinese taalspecifieke blokkering",
+		"hostlisttag.108.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Chinese taal te blokkeren."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Indonesische taalspecifieke blokkering",
+		"hostlisttag.109.description": "Specifiek ontworpen om advertenties of andere ongewenste inhoud in de Indonesische taal te blokkeren."
 	},
 	{
 		"hostlisttag.2.name": "Blokkeer malware en phishing",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Lijsten die speciaal zijn ontworpen om kwaadaardige, phishing- en oplichtingsdomeinen te blokkeren."
 	}
 ]
