--- a/locales/pl/tags.json
+++ b/locales/pl/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Listy, które blokują skrypty śledzące i reklamy na większości urządzeń."
 	},
 	{
 		"hostlisttag.4.name": "Inne",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Inne listy blokujące."
 	},
 	{
 		"hostlisttag.3.name": "Regionalne",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Listy, które koncentrują się na reklamach regionalnych i serwerach ze skryptami śledzącymi."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Blokowanie reklam w języku norweskim",
+		"hostlisttag.100.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku norweskim."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Blokowanie reklam w języku polskim",
+		"hostlisttag.101.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku polskim."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Blokowanie reklam w języku koreańskim",
+		"hostlisttag.102.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku koreańskim."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Blokowanie reklam w języku wietnamskim",
+		"hostlisttag.103.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku wietnamskim."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Blokowanie reklam w języku szwedzkim",
+		"hostlisttag.104.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku szwedzkim."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Blokowanie reklam w języku włoskim",
+		"hostlisttag.105.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku włoskim."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Blokowanie reklam w języku irańskim",
+		"hostlisttag.106.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku irańskim."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Blokowanie reklam w języku macedońskim",
+		"hostlisttag.107.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku macedońskim."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Blokowanie reklam w języku chińskim",
+		"hostlisttag.108.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku chińskim."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Blokowanie reklam w języku indonezyjskim",
+		"hostlisttag.109.description": "Zaprojektowany specjalnie do blokowania reklam lub innych niechcianych treści w języku indonezyjskim."
 	},
 	{
 		"hostlisttag.2.name": "Bezpieczeństwo",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Listy zaprojektowane specjalnie do blokowania złośliwych, phishingowych i wyłudzających informacje domen."
 	}
 ]
