--- a/locales/pt/filters.json
+++ b/locales/pt/filters.json
@@ -1,94 +1,94 @@
 [
 	{
-		"hostlist.1.name": "Filtro DNS do AdGuard",
+		"hostlist.1.name": "Filtro para AdGuard DNS",
 		"hostlist.1.description": "Filtro composto por vários outros filtros (Base de filtros do AdGuard, filtro de Redes Sociais, filtro de proteção de nonitorização, filtro de anúncios para dispositivos móveis, EasyList e EasyPrivacy) e simplificado especificamente para haver maior compatibilidade com o bloqueio de anúncios ao nível do DNS."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway Default Blocklist",
+		"hostlist.2.description": "AdAway é um bloqueador de anúncios de código aberto para Android que usa o arquivo hosts."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Bloqueio de domínios de servidores de anúncios e monitorizamento."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "Bloqueia certas armadilhas de pop-up, impede o monitorizamento do utilizador, bloqueia a maioria dos anúncios."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Bloqueia anúncios/monitorizadores e prioriza a funcionalidade sobre o bloqueio."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
+		"hostlist.23.description": "Bloqueia a espionagem e o monitorizamento no Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "Assim como agora existem listas para AdGuard Home e Pi-hole para bloquear anúncios em smart-TVs, aqui está uma tentativa de fazer o mesmo para consoles de videogame com AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "Esta é uma lista de bloqueio para bloquear o envio de metadados de smart-TVs de volta para casa, às vezes com o benefício adicional de bloquear anúncios de interface para aplicativos e serviços de filmes."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (para AdGuard Home, e para a filtragem de DNS do AdGuard para Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "Polish filters for Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Filtro para bloqueio de anúncios, principalmente em sítios coreanos."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Lista de filtros para bloqueio de anúncios em vietnamita."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Visa se livrar de anúncios, rastreamento, golpes e badware em (principalmente) sítios suecos."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Arquivo de hosts provisório para sítios italianos criados a partir de arquivos Easylist Italy e ADB X."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "Lista de hosts indesejados categorizados."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "Esta é uma lista para bloquear domínios indesejados que veiculam anúncios em sítios macedônios."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Comprometido em ser a lista de filtros de anúncios com maior taxa de acerto na região chinesa, obtendo bloqueio de anúncios preciso e proteção de privacidade."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo é um filtro adicional para complementar o EasyList para bloquear anúncios irritantes em sites de língua indonésia e malaia."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "Uma lista de bloqueio para proteger os utilizadores contra sítios não confiáveis."
 	},
 	{
 		"hostlist.11.name": "Lista de bloqueio de URLs maliciosos",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Uma lista de bloqueio de sítios maliciosos que estão sendo usados ​​para distribuição de malware, com base no despejo do banco de dados de Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (para AdGuard Home e para filtragem de DNS do Android/Windows do AdGuard)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Esta é uma lista de bloqueio de anúncio para bloquear mineração de criptografia baseada em navegador."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "Uma lista de sítios hackeados com malware, ransomware ou trojans."
 	}
 ]
