--- a/locales/ru/tags.json
+++ b/locales/ru/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Списки, которые блокируют отслеживание и рекламу на большинстве устройств."
 	},
 	{
 		"hostlisttag.4.name": "Прочее",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Другие списки блокировки."
 	},
 	{
 		"hostlisttag.3.name": "Региональные",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Списки, которые фокусируются на региональной рекламе и серверах отслеживания."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Norvegian language-specific blocking",
+		"hostlisttag.100.description": "Создан специально для блокировки рекламы и другого нежелательного контента на норвежском языке."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Polish language-specific blocking",
+		"hostlisttag.101.description": "Создан специально для блокировки рекламы и другого нежелательного контента на польском языке."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Korean language-specific blocking",
+		"hostlisttag.102.description": "Создан специально для блокировки рекламы и другого нежелательного контента на корейском языке."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Vietnamese language-specific blocking",
+		"hostlisttag.103.description": "Создан специально для блокировки рекламы и другого нежелательного контента на вьетнамском языке."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Swedish language-specific blocking",
+		"hostlisttag.104.description": "Создан специально для блокировки рекламы и другого нежелательного контента на шведском языке."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Italian language-specific blocking",
+		"hostlisttag.105.description": "Создан специально для блокировки рекламы и другого нежелательного контента на итальянском языке."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Iranian language-specific blocking",
+		"hostlisttag.106.description": "Создан специально для блокировки рекламы и другого нежелательного контента на иранском языке."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Makedonian language-specific blocking",
+		"hostlisttag.107.description": "Создан специально для блокировки рекламы и другого нежелательного контента на македонском языке."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Chinese language-specific blocking",
+		"hostlisttag.108.description": "Создан специально для блокировки рекламы и другого нежелательного контента на китайском языке."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Indonesian language-specific blocking",
+		"hostlisttag.109.description": "Создан специально для блокировки рекламы и другого нежелательного контента на индонезийском языке."
 	},
 	{
 		"hostlisttag.2.name": "Безопасность",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Списки, созданные специально для блокировки вредоносных, фишинговых и мошеннических доменов."
 	}
 ]
