--- a/locales/sk/filters.json
+++ b/locales/sk/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Filter zložený z viacerých iných filtrov (AdGuard základný filter, filter sociálnych sietí, filter proti sledovaniu, filter mobilnej reklamy, EasyList a EasyPrivacy), ktorý je zjednodušený pre lepšiu kompatibilitu s blokovaním reklamy na úrovni DNS."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway predvolený blokovací zoznam",
+		"hostlist.2.description": "AdAway je open source blokovač reklám pre Android pomocou súboru hosts."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Blokovanie pomocou reklamného servera a názvov hostiteľských serverov sledovania."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Zoznam Danyho Pollocka",
+		"hostlist.4.description": "Blokuje určité vyskakovacie pasce, zabraňuje sledovaniu používateľov, blokuje väčšinu reklamy."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "Základný zoznam blokovaní OISD",
+		"hostlist.5.description": "Blokuje reklamy/sledovače a uprednostňuje funkcie pred blokovaním."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker – Hosts špionážne pravidlá",
+		"hostlist.23.description": "Blokuje špehovanie a sledovanie v systéme Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Zoznam reklamných blokov hernej konzoly Dandelion Sprout",
+		"hostlist.6.description": "Podobne ako teraz existujú zoznamy pre AdGuard Home a Pi-hole na blokovanie reklám na inteligentných televízoroch, tu je pokus urobiť to isté aj pre videoherné konzoly s AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Blokovací zoznam Smart-TV od Perflyst a Dandelion Sprout",
+		"hostlist.7.description": "Toto je blokovací zoznam inteligentných televízorov, aby neodosielali metadáta späť domov, niekedy s ďalšou výhodou blokovania reklám rozhrania pre aplikácie a filmové služby."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (pre AdGuard Home a pre DNS filtráciu AdGuard pre Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: poľské filtre pre Pi hole",
+		"hostlist.14.description": "Poľské filtre pre Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Blokovací filter pre reklamy, najmä na kórejských stránkach."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Zoznam filtrov pre blokovanie vietnamskej reklamy."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: švédsky Frellwitov súbor Hosts",
+		"hostlist.17.description": "Jeho cieľom je zbaviť sa reklám, sledovania, podvodov a škodlivého softvéru na (väčšinou) švédskych webových stránkach."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Súbor predbežných hostiteľov pre talianske stránky vytvorený z Easylist Italy a ADB X Files."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Nežiaduce iránske domény",
+		"hostlist.19.description": "Zoznam kategorizovaných nežiaducich hostiteľov."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedónsky blokovací zoznam Pi-hole",
+		"hostlist.20.description": "Toto je zoznam na blokovanie nežiaducich domén, ktoré zobrazujú reklamy na macedónskych webových stránkach."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Zaviazali sme sa stať sa zoznamom filtrovania reklám s najvyššou návštevnosťou v čínskom regióne a dosiahnuť precízne blokovanie reklám a ochranu súkromia."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo je dodatočný filter na doplnenie EasyList na blokovanie otravných reklám na stránkach v indonézskom a malajskom jazyku."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Blokovací zoznam podvodov od DurableNapkin-a",
+		"hostlist.10.description": "Blokovací zoznam na ochranu používateľov pred nedôveryhodnými stránkami."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Zoznam blokovaných škodlivých webových stránok, ktoré sa používajú na distribúciu škodlivého softvéru, na základe výpisu databázy Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Zoznam Anti-Nalware od Dandelion Sprout",
+		"hostlist.12.description": "Zoznam Anti-Malware od Dandelion Sprout (pre AdGuard Home a pre AdGuard pre filtrovanie DNS systému Android/Windows)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Toto je blokovací zoznam na blokovanie ťažby kryptomien v prehliadači."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "Veľký zoznam webových stránok napadnutých škodlivým softvérom",
+		"hostlist.9.description": "Zoznam webových stránok, ktoré sú napadnuté malvérom, ransomvérom alebo trójskymi koňmi."
 	}
 ]
