--- a/locales/tr/tags.json
+++ b/locales/tr/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "Genel",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Çoğu cihazda izlemeyi ve reklamları engelleyen listeler."
 	},
 	{
 		"hostlisttag.4.name": "Diğer",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Diğer engel listeleri."
 	},
 	{
 		"hostlisttag.3.name": "Bölgesel",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Bölgesel reklamlara ve izleme sunucularına odaklanan listeler."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Norveççe diline özgü engelleme",
+		"hostlisttag.100.description": "Norveççe dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Lehçe diline özgü engelleme",
+		"hostlisttag.101.description": "Lehçe dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Korece diline özgü engelleme",
+		"hostlisttag.102.description": "Korece dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Vietnamca diline özgü engelleme",
+		"hostlisttag.103.description": "Vietnamca dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "İsveççe diline özgü engelleme",
+		"hostlisttag.104.description": "İsveççe dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "İtalyanca diline özgü engelleme",
+		"hostlisttag.105.description": "İtalyanca dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Farsça diline özgü engelleme",
+		"hostlisttag.106.description": "Farsça dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Makedonca diline özgü engelleme",
+		"hostlisttag.107.description": "Makedonca dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Çince diline özgü engelleme",
+		"hostlisttag.108.description": "Çince dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Endonezyaca diline özgü engelleme",
+		"hostlisttag.109.description": "Endonezyaca dilindeki reklamları veya diğer istenmeyen içerikleri engellemek için özel olarak tasarlandı."
 	},
 	{
 		"hostlisttag.2.name": "Güvenlik",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Kötü amaçlı, kimlik avı ve dolandırıcılık amaçlı alan adlarını engellemek için özel olarak tasarlanmış listeler."
 	}
 ]
