--- a/locales/zh_TW/tags.json
+++ b/locales/zh_TW/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "封鎖大多數朝向裝置的追蹤和廣告之清單。"
 	},
 	{
 		"hostlisttag.4.name": "其它的",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "其它的封鎖清單。"
 	},
 	{
 		"hostlisttag.3.name": "區域性的",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "專注於區域性的廣告和追蹤伺服器之清單。"
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "特定挪威語的封鎖",
+		"hostlisttag.100.description": "專門地旨在封鎖挪威語廣告或其它討厭的內容。"
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "特定波蘭語的封鎖",
+		"hostlisttag.101.description": "專門地旨在封鎖波蘭語廣告或其它討厭的內容。"
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "特定韓語的封鎖",
+		"hostlisttag.102.description": "專門地旨在封鎖韓語廣告或其它討厭的內容。"
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "特定越南語的封鎖",
+		"hostlisttag.103.description": "專門地旨在封鎖越南語廣告或其它討厭的內容。"
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "特定瑞典語的封鎖",
+		"hostlisttag.104.description": "專門地旨在封鎖瑞典語廣告或其它討厭的內容。"
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "特定義大利語的封鎖",
+		"hostlisttag.105.description": "專門地旨在封鎖義大利語廣告或其它討厭的內容。"
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "特定伊朗語的封鎖",
+		"hostlisttag.106.description": "專門地旨在封鎖伊朗語廣告或其它討厭的內容。"
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "特定馬其頓語的封鎖",
+		"hostlisttag.107.description": "專門地旨在封鎖馬其頓語廣告或其它討厭的內容。"
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "特定漢語的封鎖",
+		"hostlisttag.108.description": "專門地旨在封鎖漢語廣告或其它討厭的內容。"
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "特定印尼語的封鎖",
+		"hostlisttag.109.description": "專門地旨在封鎖印尼語廣告或其它討厭的內容。"
 	},
 	{
 		"hostlisttag.2.name": "安全性",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "專門地旨在封鎖惡意、網路釣魚和詐騙的網域之清單。"
 	}
 ]
